; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/sunxi/extr_sun8i-codec.c_sun8i_codec_get_hw_rate.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/sunxi/extr_sun8i-codec.c_sun8i_codec_get_hw_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_hw_params = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_hw_params*)* @sun8i_codec_get_hw_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sun8i_codec_get_hw_rate(%struct.snd_pcm_hw_params* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.snd_pcm_hw_params*, align 8
  %4 = alloca i32, align 4
  store %struct.snd_pcm_hw_params* %0, %struct.snd_pcm_hw_params** %3, align 8
  %5 = load %struct.snd_pcm_hw_params*, %struct.snd_pcm_hw_params** %3, align 8
  %6 = call i32 @params_rate(%struct.snd_pcm_hw_params* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  switch i32 %7, label %19 [
    i32 8000, label %8
    i32 7350, label %8
    i32 11025, label %9
    i32 12000, label %10
    i32 16000, label %11
    i32 22050, label %12
    i32 24000, label %13
    i32 32000, label %14
    i32 44100, label %15
    i32 48000, label %16
    i32 96000, label %17
    i32 192000, label %18
  ]

8:                                                ; preds = %1, %1
  store i32 0, i32* %2, align 4
  br label %22

9:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %22

10:                                               ; preds = %1
  store i32 2, i32* %2, align 4
  br label %22

11:                                               ; preds = %1
  store i32 3, i32* %2, align 4
  br label %22

12:                                               ; preds = %1
  store i32 4, i32* %2, align 4
  br label %22

13:                                               ; preds = %1
  store i32 5, i32* %2, align 4
  br label %22

14:                                               ; preds = %1
  store i32 6, i32* %2, align 4
  br label %22

15:                                               ; preds = %1
  store i32 7, i32* %2, align 4
  br label %22

16:                                               ; preds = %1
  store i32 8, i32* %2, align 4
  br label %22

17:                                               ; preds = %1
  store i32 9, i32* %2, align 4
  br label %22

18:                                               ; preds = %1
  store i32 10, i32* %2, align 4
  br label %22

19:                                               ; preds = %1
  %20 = load i32, i32* @EINVAL, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @params_rate(%struct.snd_pcm_hw_params*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
